--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@
 
 body {
   margin: 0;
-  background-color: #0B2434;
+  background-color: #000739;
   padding: 20px;
 }
 
 main {
   background-color: #F5F5F5;
-  height: 400px;
+  height: 550px;
   max-width: 800px;
   border-radius: 5px;
   padding: 20px;
@@ -18,6 +18,18 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.title{
+    font-family: "Russo One", sans-serif;
+    font-weight: 400;
+    font-style: normal;  
+}
+
+.instructions{
+  font-family: "Calibri", sans-serif;
+  font-size: 24px;
+  text-align: center;
 }
 
 .dice-container {
@@ -47,7 +59,6 @@ main {
   font-size: 2rem;
 }
 
-/* CSS */
 .button-41 {
   background-color: initial;
   background-image: linear-gradient(-180deg, #00D775, #00BD68);
@@ -71,7 +82,7 @@ main {
   -webkit-user-select: none;
   vertical-align: top;
   white-space: nowrap;
-  width: 200px;
+  width: 250px;
   z-index: 9;
   border: 0;
   margin-top: 30px;
